manually written wrapper code – what we want to generate

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,8 @@
                 "<node_internals>/**"
             ],
             "outputCapture": "std",
-            "type": "node"
+            "type": "node",
+            "sourceMaps": false
         }
     ]
 }
